Add missing placeholder in russian localization of "version"

--- a/po/wesnoth-lib/ru.po
+++ b/po/wesnoth-lib/ru.po
@@ -6026,7 +6026,7 @@ msgstr "да"
 
 #: src/gui/dialogs/game_version.cpp:137
 msgid "Version $version"
-msgstr "Версия"
+msgstr "Версия $version"
 
 #: src/gui/dialogs/game_version.cpp:141
 msgid "Running on $os"
