Add missing placeholder in russian localization of "version"

--- a/po/wesnoth-lib/ru.po
+++ b/po/wesnoth-lib/ru.po
@@ -6033,7 +6033,7 @@ msgstr "да"
 #: src/gui/dialogs/game_version_dialog.cpp:133
 #: src/gui/dialogs/title_screen.cpp:258
 msgid "Version $version"
-msgstr "Версия"
+msgstr "Версия $version"
 
 #: src/gui/dialogs/game_version_dialog.cpp:137
 msgid "Running on $os"
