updated Spanish translation

--- a/po/wesnoth-ai/es.po
+++ b/po/wesnoth-ai/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:29 UTC\n"
-"PO-Revision-Date: 2018-09-16 19:06+0200\n"
+"PO-Revision-Date: 2019-03-21 14:10+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Spanish <kde-i18n-doc@kde.org>\n"
 "Language: es\n"
@@ -2921,6 +2921,21 @@ msgstr ""
 
 #. [event]
 #: data/ai/micro_ais/scenarios/simple_attack.cfg:165
+#, fuzzy
+#| msgid ""
+#| "Hahahahaha!! I have given special instruction to my Soulless to attack "
+#| "all your almost-advanced units first. Also watch how those same Soulless "
+#| "will throw themselves mercilessly at your pitiful soldiers after that, "
+#| "saving my more valuable skeleton minions for later. I have taken the term "
+#| "'disposable units' to a whole new level. Watch in awe!!\n"
+#| "\n"
+#| "<i>Translation: The undead side includes two instances of the Simple "
+#| "Attack Micro AI.  The first makes the Soulless attack all units 1 XP from "
+#| "leveling up, such that they can be eliminated afterward.  The second "
+#| "executes all remaining attacks possible by Soulless (and Walking "
+#| "Corpses), without regard for their own safety.  Only after that does the "
+#| "default Wesnoth attack mechanism kick in to attack with the remaining "
+#| "units (skeletons).</i>"
 msgid ""
 "Hahahahaha !! I have given special instruction to my Soulless to attack all "
 "you almost-advanced units first. Also watch how those same Soulless will "
@@ -2936,13 +2951,13 @@ msgid ""
 "mechanism kick in to attack with the remaining units (skeletons).</i>"
 msgstr ""
 "¡Jajajajaja| He dado instrucciones especiales a mis desalmados para que "
-"ataquen primero a tus unidades más avanzadas. Observa como esos desalmados "
-"se arrojan sin piedad contra tus patéticos soldados, mientras reservo a mis "
-"valiosos esqueletos para más tarde. He elevado la expresión «unidades "
-"prescindibles» a un nuevo nivel. ¡Asombrate!\n"
+"ataquen primero a tus unidades más avanzadas. Observa también como esos "
+"desalmados se arrojan después sin piedad contra tus patéticos soldados, "
+"mientras reservo a mis valiosos esqueletos para más tarde. He elevado la "
+"expresión «unidades prescindibles» a un nuevo nivel. ¡Asombrate!\n"
 "\n"
-"<i>Traducción: El lado de los no muertos tiene dos instancias de la micro IA "
-"«ataque simple». La primera hace que los desalmados ataquen a todas las "
+"<i>Traducción: El bando de los no muertos tiene dos instancias de la micro "
+"IA «ataque simple». La primera hace que los desalmados ataquen a todas las "
 "unidades a un punto de XP para subir de nivel, con la intención de "
 "eliminarlas. La segunda realiza todos los ataques posibles con desalmados y "
 "muertos andantes, sin tener en cuenta su seguridad. Solo después de eso, el "
