--- a/po/wesnoth-sotbe/es.po
+++ b/po/wesnoth-sotbe/es.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-05-19 19:28+0200\n"
+"PO-Revision-Date: 2019-03-26 14:20+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Spanish <kde-i18n-doc@kde.org>\n"
 "Language: es\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:9
@@ -600,23 +600,31 @@ msgstr "Hecho."
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:212
+#, fuzzy
+#| msgid "Resist until your people are ready to go (turn 12)"
 msgid "Resist until your people are ready to go (Turn 12)"
 msgstr "Resista hasta que su gente esté preparada para partir (turno 12)"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:215
+#, fuzzy
+#| msgid "Resist until your people are ready to go (turn 13)"
 msgid "Resist until your people are ready to go (Turn 13)"
 msgstr "Resista hasta que su gente esté preparada para partir (turno 13)"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:218
+#, fuzzy
+#| msgid "Resist until your people are ready to go (turn 14)"
 msgid "Resist until your people are ready to go (Turn 14)"
 msgstr "Resista hasta que su gente esté preparada para partir (turno 14)"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:223
+#, fuzzy
+#| msgid "Then move Kapou’e to the signpost in the northeast"
 msgid "Then move Kapou’e to the signpost in the Northeast"
-msgstr "Lleve a Kapou'e hasta la señal en el noreste"
+msgstr "Entonces lleve a Kapou'e hasta la señal en el noreste"
 
 #. [message]: role=Helper
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:263
@@ -634,6 +642,8 @@ msgstr "Os llevó bastante tiempo. ¡Vamos!"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:279
+#, fuzzy
+#| msgid "Move Kapou’e to the signpost in the northeast"
 msgid "Move Kapou’e to the signpost in the Northeast"
 msgstr "Lleve a Kapou'e hasta la señal en el noreste"
 
@@ -4047,6 +4057,8 @@ msgstr "¡Buenos días, Shan Taum!"
 
 #. [message]: speaker=Shan Taum
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:218
+#, fuzzy
+#| msgid "What... Kapou’e! What in the frozen Northlands are you doing here?!"
 msgid "What... Kapou’e! What in the frozen northlands are you doing here?!"
 msgstr "¡Qué... Kapou'e! ¡Por las heladas tierras del norte! ¿Qué haces aquí?"
 
