--- a/po/wesnoth-httt/es.po
+++ b/po/wesnoth-httt/es.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:30 UTC\n"
-"PO-Revision-Date: 2018-09-16 18:19+0200\n"
+"PO-Revision-Date: 2019-03-26 12:08+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Wesnoth\n"
 "Language: es\n"
@@ -2380,6 +2380,10 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/scenarios/07_Crossroads.cfg:53
+#, fuzzy
+#| msgid ""
+#| "The Queen’s agents were still scouring the coastal regions, for news of "
+#| "Elensefar’s rescue had not yet reached her."
 msgid ""
 "The queen’s agents were still scouring the coastal regions, for news of "
 "Elensefar’s rescue had not yet reached her."
@@ -2792,6 +2796,12 @@ msgstr "Gracias por regresar para ayudarnos, Moremirmu."
 
 #. [message]: speaker=Moremirmu
 #: data/campaigns/Heir_To_The_Throne/scenarios/09_The_Valley_of_Death.cfg:390
+#, fuzzy
+#| msgid ""
+#| "It is both my duty and pleasure, my lord! We were dining with some royal "
+#| "guards of the Princess, taking a rest from our pilgrimage, when they "
+#| "spoke of how you were tricked into traveling these dangerous lands. We "
+#| "could do nothing but help you!"
 msgid ""
 "It is both my duty and pleasure, my lord! We were dining with some royal "
 "guards of the princess, taking a rest from our pilgrimage, when they spoke "
@@ -5394,6 +5404,10 @@ msgstr ""
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:339
+#, fuzzy
+#| msgid ""
+#| "Hold your tongue, Kalenz. The Princess is our ally and of royal blood. "
+#| "She deserves not your disrespect."
 msgid ""
 "Hold your tongue, Kalenz. The princess is our ally and of royal blood. She "
 "deserves not your disrespect."
@@ -5844,6 +5858,10 @@ msgstr "El dominio de Aimucasur sobre esta tierra maldita se ha terminado."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:342
+#, fuzzy
+#| msgid ""
+#| "Aimucasur? So you know of this Lich-Lord? Did you know him? Was he a "
+#| "powerful mage?"
 msgid ""
 "Aimucasur? So you know of this Lich-Lord? Did you know him? He was a "
 "powerful mage?"
@@ -6718,13 +6736,19 @@ msgstr ""
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:521
+#, fuzzy
+#| msgid ""
+#| "Stop for a moment, Princess. Look — you can barely see them in the "
+#| "distance there, but the advance scouts have found each other. The Queen’s "
+#| "troops are marching full speed for the orcs’ camp, and vice-versa. These "
+#| "armies are out for blood."
 msgid ""
 "Stop for a moment, princess. Look — you can barely see them in the distance "
 "there, but the advance scouts have found each other. The Queen’s troops are "
 "marching full speed for the orcs’ camp, and vice-versa. These armies are out "
 "for blood."
 msgstr ""
-"Deteneos por un momento, princesa, y mirad; difícilmente podéis verlos en la "
+"Deteneos por un momento, princesa. Mirad, difícilmente podéis verlos en la "
 "distancia desde aquí, pero los exploradores de uno y otro bando ya se han "
 "encontrado. Las tropas de la reina marchan a toda prisa en dirección al "
 "campamento de los orcos y viceversa. Esos ejércitos están sedientos de "
@@ -6741,14 +6765,19 @@ msgstr ""
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:529
+#, fuzzy
+#| msgid ""
+#| "(hushed) Our soldiers will defend us as we rush across the field. Sorry "
+#| "to be blunt, Princess, but you and I are the only ones who need to make "
+#| "it across alive."
 msgid ""
 "(hushed) Our soldiers will defend us as we rush across the field. Sorry to "
 "be blunt, princess, but you and I are the only ones who need to make it "
 "across alive."
 msgstr ""
-"(susurrando) Nuestros soldados nos defenderán mientras escapamos. Lamento "
-"ser tan directo, princesa, pero vos y yo somos los únicos que tenemos la "
-"obligación de cruzar con vida."
+"(susurrando) Nuestros soldados nos defenderán mientras nos apresuramos a "
+"cruzar a través del campo de batalla. Lamento ser tan directo, princesa, "
+"pero vos y yo somos los únicos que tenemos la obligación de cruzar con vida."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:533
@@ -7084,7 +7113,7 @@ msgstr ""
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg:296
 #, fuzzy
-#| msgid "Then we must hurry. Stand fast! We will send reinforcements."
+#| msgid "Then we must hurry. Stand fast! We shall send reinforcements."
 msgid "Then we must hurry. Stand fast, we will send reinforcements."
 msgstr ""
 "Entonces hemos de darnos prisa. ¡Mantengamos el ritmo! Enviaremos refuerzos."
@@ -8263,13 +8292,17 @@ msgstr "¿Quién es entonces vuestro líder? ¿A quién servimos?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:472
+#, fuzzy
+#| msgid ""
+#| "You will serve us. You will protect our flanks while we make way straight "
+#| "for the Queen. With you on either flank, we can surely overcome her."
 msgid ""
 "You will serve us. You will protect our flanks while we make way straight "
 "for the queen. With you on either flank, we can surely overcome her."
 msgstr ""
 "Nos serviréis a nosotros. Protegeréis nuestros flancos mientras nos abrimos "
-"paso hasta la reina. Con vuestro refuerzo en ambos flancos, seguro que lo "
-"conseguiremos."
+"paso hasta la reina. Con vuestro refuerzo en ambos flancos, seguro que la "
+"superaremos."
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:476
@@ -8853,6 +8886,11 @@ msgstr "tempestad violenta"
 #. [unit_type]
 #: data/campaigns/Heir_To_The_Throne/units/Fighter.cfg:54
 #: data/campaigns/Heir_To_The_Throne/units/Fighter.cfg:60
+#, fuzzy
+#| msgid ""
+#| "Young and brash, Fighters attack with a sword, and are vulnerable to more "
+#| "seasoned enemies. However, they have the potential to become great "
+#| "warriors one day."
 msgid ""
 "Young and brash, Fighters attack with a sword, and are vulnerable to more "
 "seasoned enemies. However they have the potential to become great warriors "
@@ -9231,14 +9269,19 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/utils/intro.cfg:10
+#, fuzzy
+#| msgid ""
+#| "The Northern host encamped at Galcadar, by the Ford of Abez, and the king "
+#| "led his forces to meet them. Splitting his army in two, he led one half "
+#| "while his son, the crown prince Eldred, led the other."
 msgid ""
 "The Northern host encamped at Galcadar, by the ford of Abez, and the king "
 "led his forces to meet them. Splitting his army in two, he led one half "
 "while his son, the crown prince Eldred, led the other."
 msgstr ""
-"Las huestes del Norte acamparon en Galcadar, en el vado de Abez, y el rey "
-"condujo sus tropas para encontrarse con aquellas. Dividiendo su ejército en "
-"dos, lideró una mitad, mientras su hijo, el príncipe heredero Eldred, "
+"Las huestes del Norte acamparon en Galcadar, en el Vado de Abez, y el rey "
+"condujo sus tropas para encontrarse con ellas. Dividiendo su ejército en "
+"dos, lideró una mitad mientras su hijo, el príncipe heredero Eldred, "
 "comandaba la otra."
 
 #. [part]
@@ -9355,6 +9398,9 @@ msgstr ""
 "Wesnoth, Delfador crió al pequeño Konrad bajo la protección de los elfos, y "
 "se convirtió en triste observador, mientras el reinado de terror de "
 "Asheviere daba comienzo..."
+
+#~ msgid "Meeting point"
+#~ msgstr "Punto de encuentro"
 
 #~ msgid ""
 #~ "That noise was made by no troll! What manner of beast makes its den in "
