--- a/po/wesnoth-nr/es.po
+++ b/po/wesnoth-nr/es.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-09-16 16:57+0200\n"
+"PO-Revision-Date: 2019-03-26 12:48+0100\n"
 "Last-Translator: Pepe <donpepe1963@gmail.com>\n"
 "Language-Team: Spanish <kde-i18n-doc@kde.org>\n"
 "Language: es\n"
@@ -140,6 +140,14 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:23
+#, fuzzy
+#| msgid ""
+#| "The dwarves of Knalga, cannily reckoning the gains from trade, built "
+#| "strong fortifications around Dwarven Doors. The people who called it "
+#| "home, dwarven and human alike, knew that the wealth of their city might "
+#| "arouse envy from afar — hence they kept their weapons sharp, and reckoned "
+#| "themselves well able to fight off any bandit gang or petty warlord that "
+#| "could arise in the thinly-settled Northlands."
 msgid ""
 "The dwarves of Knalga, cannily reckoning the gains from trade, built strong "
 "fortifications around Dwarven Doors. The people who called it home, dwarven "
@@ -2436,14 +2444,19 @@ msgstr ""
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:744
+#, fuzzy
+#| msgid ""
+#| "If you have no objection, Tallin, we would like to join you. These "
+#| "Northlands are hardly safe these days for anyone to be traveling on their "
+#| "own, and we could lend valuable help to your cause."
 msgid ""
 "If you have no objection, Tallin, we would like to join you. These "
 "northlands are hardly safe these days for anyone to be traveling on their "
 "own, and we could lend valuable help to your cause."
 msgstr ""
-"Si no tenéis problema con ello Tallin, me gustaría unirme a vosotros. Estas "
-"tierras hoy en día no son nada seguras para los viajeros, y podríamos "
-"entregaros valiosa ayuda para vuestra causa."
+"Si no tenéis problema con ello Tallin, nos gustaría unirnos a vosotros. "
+"Estas tierras norteñas no son nada seguras para los viajeros solitarios en "
+"los tiempos que corren, y podríamos ser de gran ayuda para vuestra causa."
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:749
@@ -6172,21 +6185,29 @@ msgstr "Eryssa"
 
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:351
+#, fuzzy
+#| msgid ""
+#| "(<i>hushed</i>) Thank you, my saviors. Who has come to rescue me from "
+#| "vile captivity?"
 msgid ""
 "I am free! Thank you, my saviors. Who has come to rescue me from vile "
 "captivity?"
 msgstr ""
-"¡Estoy libre! Gracias, mis salvadores. ¿Quién ha venido a rescatarme de "
+"(<i>susurro</i>) Gracias, mis salvadores. ¿Quién ha venido a rescatarme de "
 "éstos viles captores?"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:357
+#, fuzzy
+#| msgid ""
+#| "(<i>whispering</i>) Later, princess, first let’s get outta — uh, let us "
+#| "take our leave of this place as swiftly as may be!"
 msgid ""
 "Later, princess, first let’s get outta — uh, let us take our leave of this "
 "place as swiftly as may be!"
 msgstr ""
-"¡Luego, princesa, primero huyamos de — eh, abandonemos este lugar tan pronto "
-"como nos sea posible!"
+"(<i>susurrando</i>) Luego, princesa, primero huyamos de — eh, ¡abandonemos "
+"este lugar tan pronto como nos sea posible!"
 
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:362
@@ -7176,6 +7197,12 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:240
+#, fuzzy
+#| msgid ""
+#| "Princess, we are not seeking to do business here: <i>“I do this for you "
+#| "and you do this for me.”</i> No, we seek to build everlasting friendships "
+#| "which will forever ensure the peace and prosperity of these Northlands. "
+#| "Therefore, let there be no talk of debts and repayments between us."
 msgid ""
 "Princess, we are not seeking to do business here: <i>“I do this for you and "
 "you do this for me.”</i> No, we seek to build everlasting friendships which "
@@ -7183,7 +7210,7 @@ msgid ""
 "let there be no talk of debts and repayments between us."
 msgstr ""
 "Princesa, no buscamos hacer negocios aquí: <i>«yo hago esto por vos y vos "
-"esto por mí»</i>. No, buscamos construir amistades duraderas que aseguren "
+"esto por mí.»</i>. No, buscamos construir amistades duraderas que aseguren "
 "por siempre la paz y prosperidad de estas tierras norteñas. Así que no habrá "
 "discusión de pagos y deudas entre nosotros."
 
@@ -9212,12 +9239,16 @@ msgstr "¡Jaja! ¡Tenemos el oro ahora!"
 
 #. [message]: id=Ha'Tuil
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:529
+#, fuzzy
+#| msgid ""
+#| "Hahaha! Mission accomplished! I’ll send a wolf to the Master to deliver "
+#| "the gold. Now let’s crush the rest of this scum!"
 msgid ""
 "Hahaha! Mission accomplished, men! Now let’s crush the rest of this scum and "
 "report back to the Master."
 msgstr ""
-"¡Jajaja! ¡Misión cumplida, soldados! Ahora, aplastemos al resto de esta "
-"escoria y volvamos con el Amo."
+"¡Jajaja! ¡Misión cumplida! Enviaré un lobo al Amo para entregar el oro. "
+"¡Ahora, aplastemos al resto de esta escoria!"
 
 #. [message]: id=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:534
@@ -10705,7 +10736,7 @@ msgstr "¡Ay!, ¡Ay de mí! ¡Pero debéis continuar vuestra misión sin mí!"
 #. [message]: speaker=Elenia
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:862
 msgid "Eryssa, no! Please don’t die!"
-msgstr "¡Eryssa, no! ¡Por favor, no os mueras!"
+msgstr "¡Eryssa, no! ¡Por favor, no os muráis!"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:867
@@ -10738,6 +10769,41 @@ msgstr "Arthian"
 
 #~ msgid "Here is a similar door as the one before. I try to open it."
 #~ msgstr "Aquí hay otra puerta parecida a la anterior. Intentaré abrirla."
+
+#~ msgid ""
+#~ "Ghouls! They have an insatiable hunger for flesh and even one scratch "
+#~ "from their claws will weaken you with sickness and disease. Nasty things; "
+#~ "let’s chop them to pieces before they can leave the canal."
+#~ msgstr ""
+#~ "¡Gules! Sienten un hambre insaciable por la carne e incluso el más leve "
+#~ "arañazo de sus garras te debilitará y enfermará. Cosas repugnantes; "
+#~ "hagamoslos pedazos antes de que puedan salir del canal."
+
+#~ msgid ""
+#~ "You will win this scenario immediately upon moving onto the hex "
+#~ "containing the Princess’s cage"
+#~ msgstr ""
+#~ "Se completará el escenario en el momento en el que se alcance el hexágono "
+#~ "ocupado por la jaula de la princesa"
+
+#~ msgid ""
+#~ "The intruders are breaking in! Get to the walls and defend the fortress! "
+#~ "And where did that Elvish Princess go?"
+#~ msgstr ""
+#~ "¡Los intrusos están irrumpiendo! ¡Situaros en los muros para defender la "
+#~ "fortaleza! ¿Y donde diablos está esa princesa elfa?"
+
+#~ msgid "Death of Eryssa"
+#~ msgstr "Muerte de Eryssa"
+
+#~ msgid "Turns run out"
+#~ msgstr "Fin de los turnos"
+
+#~ msgid "You will not receive any gold if Sisal dies."
+#~ msgstr "No recibirás ningún oro si muere Sisal."
+
+#~ msgid "How could this happen? We can’t possibly go on without her..."
+#~ msgstr "¿Cómo ha podido pasar esto? No podremos seguir sin ella..."
 
 #~ msgid "Clear the mines"
 #~ msgstr "Limpie las minas"
@@ -10801,9 +10867,6 @@ msgstr "Arthian"
 #~ msgid "‘The master’s study’ eh? I bet we’ll find Malifor there!"
 #~ msgstr ""
 #~ "«El estudio del amo», ¿no? ¡Apuesto a que encontraremos a Malifor allí!"
-
-#~ msgid "Turns run out"
-#~ msgstr "Fin de los turnos"
 
 #~ msgid "Death of Tallin or Stalrag."
 #~ msgstr "Muerte de Tallin o Stalrag."
